<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txtView1"
        android:layout_width="300dp"
        android:layout_height="300dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.35000002" />

    <RadioGroup
        android:id="@+id/RGD1"
        android:layout_width="206dp"
        android:layout_height="191dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtView1"
        app:layout_constraintVertical_bias="0.110000014">

        <RadioButton
            android:id="@+id/pink"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radiobutton4"
            tools:ignore="DuplicateSpeakableTextCheck"
            tools:text="Pink" />

        <RadioButton
            android:id="@+id/blue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radiobutton3"
            tools:text="Blue" />

        <RadioButton
            android:id="@+id/red"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radiobutton2"
            tools:text="Red" />

        <RadioButton
            android:id="@+id/green"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:text="@string/radiobutton"
            tools:ignore="TouchTargetSizeCheck"
            tools:text="Green" />
    </RadioGroup>

    <Button
        android:id="@+id/btnRandom"
        android:layout_width="140dp"
        android:layout_height="54dp"
        android:text="@string/button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/RGD1"
        app:layout_constraintVertical_bias="0.43"
        tools:text="Random" />

    <TextView
        android:id="@+id/txtCount2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="@+id/txtView1"
        app:layout_constraintEnd_toEndOf="@+id/txtView1"
        app:layout_constraintStart_toStartOf="@+id/txtView1"
        app:layout_constraintTop_toTopOf="@+id/txtView1" />

    <TextView
        android:id="@+id/txtResult2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="48sp"
        app:layout_constraintBottom_toTopOf="@+id/txtView1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.75" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/dark"
        app:layout_constraintBottom_toTopOf="@+id/txtResult2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/changa_one"
        android:text="@string/e_paano_kung_color_game"
        android:textColor="#D5FFFFFF"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView" />

</androidx.constraintlayout.widget.ConstraintLayout>